# bevy_robot_dojo

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: ant.xml
assets/robots/flamingo_edu/urdf/: Edu_v4.urdf
assets/robots/unitree_a1/urdf/: a1.urdf
examples/: a1_walk.rs  basic.rs  show_dojo.rs
python/: bevy_env.py  control.ipynb  train.ipynb  train.py
src/: main.rs  mujoco_parser.rs  mujoco_plugin.rs  mujoco_xml_parser.rs  physics.rs  stub_ant_robot.rs
