[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
avian3d = "0.1.2"
bevy = { version = "0.15", features = ["jpeg", "png"] }
bevy-inspector-egui = { version = "0.28" }
lazy_static = "1.5.0"
rand = "0.8.5"
roxmltree = "0.20.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
regex = "1.11.1"