[package]
name = "bevy_robot_dojo"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15", features = ["jpeg", "png"] }
bevy_urdf = {path = "../bevy_urdf" }
bevy_flycam = "0.15.0"
bevy-inspector-egui = "0.30"
bevy_rapier3d = { version = "0.29", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.9"
bevy_stl = "0.15"
bevy_rl = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
